@startuml

' Classes
abstract class Person {
  - first_name : str
  - last_name  : str
}

class Author {
  - biography : str
}

class JuryMember {
  - login: str
  - password_hash : str
  - role : enum
}

class Book {
  - title : str
  - summary : str
  - number_pages : int
  - publication_date : date
  - isbn : str
  - price : float
}

class Character {
  - name : str
}

class Selection {
  - date_selection : date
  - number_selection : int
}

class Vote {
  - vote_date : date
}

class Publisher {
  - name : str
  - address : str
}


' Héritage
Person <|-- Author
Person <|-- JuryMember


' Associations
Author "1" -- "0..*" Book      : écrit >
Book "0..*" -- "1" Character   : contient >
Publisher "1" -- "0..*" Book   : publie >
Selection "1" -- "1..*" Book : contient >
Book "1..*" -- "0..*" Selection

' Vote : un membre du jury effectue plusieurs votes
JuryMember "1" --> "0..*" Vote : effectue >
' Chaque vote concerne un seul livre
Vote "1" --> "1" Book          : concerne >
' Chaque vote appartient à une sélection
Selection "1" -- "0..*" Vote   : regroupe >

@enduml

